0.8

  Added the pseudo groups "role:Anonymous" to which everybody belongs,
  and "role:Authenticated" to which logged-in users belong. This makes
  it easy to use only local roles instead of changing the
  role/permission map, for everything that doesn't involve blocking
  permissions.

0.7

  Support for CMF Catalog Tool.

0.6

  First public release.
  Groups are now a in separate class.

0.5

  First working version.